Magit-annex NEWS -- history of user-visible changes   -*- mode: org; -*-

* master (unreleased)

** New features

- In ~magit-annex-list-mode~ buffers, file action commands now
  consider files selected by the region when choosing a default for
  completion.

* 1.5.0

Magit-annex has been updated for the latest version of Magit and now
requires version 2.12.0 or later.

* 1.4.0

Magit-annex has been updated for the latest version of Magit and now
requires version 2.11.0 or later.

** Interface changes

- Starting with Magit 2.11.0, the commands ~magit-git-command~ and
  ~magit-git-command-topdir~ add "git " to the initial input rather
  than prepending it to the input after it is read.  This change
  enables arbitrary shell commands to be executed.  Similarly, the
  commands ~magit-annex-command~ and ~magit-annex-command-topdir~ now
  set the initial input to "git annex ".

** Miscellaneous

- The option ~magit-annex-standard-options~ has been renamed to
  ~magit-annex-global-arguments~ and marked as obsolete.

* 1.3.1

** New features

- The ~--no-commit~ switch and ~--jobs~ option have been added to
  ~magit-annex-sync-popup~.

* 1.3.0

** New features

- The prompt for file actions now supports wildcards.

- The command ~magit-annex-unused~ now supports arguments through the
  new popup ~magit-annex-unused-popup~.  A new command
  ~magit-annex-unused-reflog~ has also been added to the popup.
  ~magit-annex-unused-popup~ has replaced ~magit-annex-unused-popup~
  in the top-level Magit-annex popup.

- The command ~magit-annex-list-files~ now supports the ~--allrepos~
  flag through the new popup ~magit-annex-list-popup~.  By default,
  ~@l~ calls ~magit-annex-list-files~ directly, but a prefix argument
  invokes the popup.

- New command ~magit-annex-list-dir-files~ has been added as an action
  in ~magit-annex-list-popup~.  This functionality was previously
  available when a prefix argument was given to
  ~magit-annex-list-files~.

** Interface changes
