@@ -258,3 +258,19 @@
     (magit-annex-lock-files '("annex-file") '("--force"))
     (magit-annex-tests-wait)
     (should-not (magit-annex-unlocked-files))))
+
+(ert-deftest magit-annex-undo-files ()
+  (magit-annex-with-test-repo
+    (magit-annex-tests-modify-file "annex-file")
+    (magit-annex-add "annex-file")
+    (magit-call-git "commit" "-m" "annex commit")
+    (let* ((key-fn (lambda (x)
+                     (magit-git-str "annex" "lookupkey" x)))
+           (orig-key (funcall key-fn "annex-file") ))
+      (magit-annex-unlock-files '("annex-file"))
+      (magit-annex-tests-modify-file "annex-file")
+      (magit-annex-add "annex-file")
+      (magit-call-git "commit" "-m" "update file")
+      (should-not (equal orig-key (funcall key-fn "annex-file")))
+      (magit-annex-undo-files '("annex-file"))
+      (should (equal orig-key (funcall key-fn "annex-file"))))))
